--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Basic testing using jest and mongodb",
   "main": "index.js",
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "4.4.1"
+    }
+  },
   "scripts": {
     "test": "jest",
     "start": "node index.js"
