Increased test coverage by adding tests for error checking

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --coverage",
     "start": "node index.js"
   },
   "author": "Liam King",
