--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jade": "^1.11.0",
     "mongodb": "^3.6.2",
     "mongodb-memory-server": "^6.9.2",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "multer": "^1.4.2"
   }
 }
