--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
+    "aws-sdk": "^2.888.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "mongodb": "^3.6.2",
     "mongodb-memory-server": "^6.9.2",
     "mongoose": "^5.10.13",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   }
 }
