--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "aws-sdk": "^2.888.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "mongodb": "^3.6.2",
